tests/instantiating/masters_negative_value/stderr.golden
error: 'masters' property must be positive, current value -10
bus.fbd +2:12
   |
 2 | 	masters = -10
   | 	          ^^^
